test/lexer/file-expand-05.stderr
At: "file-expand-05.hac":3:
At: "wrapper.hac":4:
parse error: syntax error
parser stacks:
state	value
#STATE#	(imported-root) [3:1..21]
#STATE#	%{ [0:2]
#STATE#	(imported-root-list) [1:1--2:20]
#STATE#	(type-ref) [4:1..4]
#STATE#	identifier: error [4:6..10]
#STATE#	identifier: here [4:12..15]
in state #STATE#, possible rules are:
	instance_id_item : ID . optional_template_arguments_in_angles sparse_range_list  (#RULE#)
	instance_id_item : ID . optional_template_arguments_in_angles  (#RULE#)
	instance_id_item : ID . optional_template_arguments_in_angles extended_connection_actuals_list  (#RULE#)
	instance_id_item : ID . optional_template_arguments_in_angles '=' alias_list  (#RULE#)
	optional_template_arguments_in_angles : .  (#RULE#)
acceptable tokens are: 
	'$' (reduce)
	'(' (reduce)
	',' (reduce)
	';' (reduce)
	'<' (shift)
	'=' (reduce)
	'[' (reduce)
